--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "normalize.css": "^8.0.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-icons": "^4.2.0",
     "react-is": "^16.13.1",
     "react-particles-js": "^3.4.1",
     "react-scripts": "4.0.2",
