--- a/package.json
+++ b/package.json
@@ -6,15 +6,14 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "dependence": "^1.1.0",
-    "normalize.css": "^8.0.1",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-icons": "^4.2.0",
-    "react-is": "^16.13.1",
-    "react-particles-js": "^3.4.1",
-    "react-scripts": "4.0.2",
-    "styled-components": "^5.2.3",
+    "icons": "^1.0.0",
+    "npm": "^7.11.2",
+    "react": "^17.0.2",
+    "react-burger-menu": "^3.0.6",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "sass": "^1.32.10",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -42,6 +41,7 @@
     ]
   },
   "devDependencies": {
-    "node-sass": "^5.0.0"
+    "eslint": "^7.24.0",
+    "eslint-plugin-react": "^7.23.2"
   }
 }
