--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "daisyui": "^1.16.5",
+    "i18next": "^21.6.3",
+    "i18next-browser-languagedetector": "^6.1.2",
     "icons": "^1.0.0",
     "npm": "^7.11.2",
     "react": "^17.0.2",
     "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.15.1",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.4.3",
@@ -48,7 +51,7 @@
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "@types/jest": "^27.0.3",
     "@types/node": "^17.0.1",
-    "@types/react": "^17.0.37",
+    "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "autoprefixer": "^9.8.8",
     "awesome-typescript-loader": "^5.2.1",
