--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/node": "^17.0.1",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@types/react-router-dom": "^5.3.2",
     "autoprefixer": "^9.8.8",
     "awesome-typescript-loader": "^5.2.1",
     "eslint": "^7.24.0",
