--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.26.1",
     "daisyui": "^1.16.5",
     "i18next": "^21.6.3",
     "i18next-browser-languagedetector": "^6.1.2",
